# rimworld-mcp

./: .gitignore  README.md  hermes-mcp-config.yaml
RimworldMcp/: build.sh
RimworldMcp/About/: About.xml
RimworldMcp/Source/: ChatKeybinding.cs  ChatManager.cs  ChatWindow.cs  EventFeedManager.cs  GameBridge.cs  GoalManager.cs  HarmonyPatches.cs  HttpServer.cs  MCPLifecycle.cs  RimworldMcpMod.cs
RimworldMcp/Source/ApiHandlers/: AlertsHandler.cs  AnimalsHandler.cs  ArchitectHandler.cs  AreasHandler.cs  AssignHandler.cs  AutoPauseManager.cs  BatchHandler.cs  BillsHandler.cs  CaravanHandler.cs  ChatHandler.cs  ColonyHandler.cs  CommandHandler.cs  DashboardHandler.cs  DlcHandler.cs  EventFeedHandler.cs  EventsHandler.cs  FactionsHandler.cs  GoalHandler.cs  GrowingHandler.cs  MapHandler.cs  MoodHandler.cs  PawnStatsHandler.cs  PawnsHandler.cs  PrisonersHandler.cs  RecipesHandler.cs  RelationsHandler.cs  ResearchHandler.cs  ScheduleHandler.cs  SpawnHandler.cs  TimeHandler.cs  WeatherHandler.cs  WorkGridHandler.cs  ZonesHandler.cs  dashboard.html
dashboard/: AGENTS.md  PLAN.md  README.md  dashboard.html
mcp-server/: pyproject.toml  start.sh
mcp-server/src/rimworld_mcp/: __init__.py  event_watcher.py  rimworld_client.py  server.py
