[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rimworld-mcp"
version = "1.0.0"
description = "MCP server for RimWorld colony control via HTTP API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
rimworld-mcp = "rimworld_mcp.server:main"
rimworld-watcher = "rimworld_mcp.event_watcher:main"
